2005-08-10  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* doc/en/dcsewerdesign.xml:
	* build.xml:
	* dcsewerdesign.nsi:
	* dcsewerdesignextension.make.ave: Updated for 2.0.8 release
	
2005-08-09  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* doc/docbook.xsl: Don't include page numbers in cross references;
	Don't use CP1256
	* doc/docbook.css: Improved author layout
	* dcsewerdesign.profile.constantgradient.calculate.ave: Calculation
	was done in the wrong direction
	* sample/line.dbf: Added gradient field

2005-08-07  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcsewerdesign.createdbfsewercalculation.ave: added new
	configuration file parameter: "PerPerson" - Configuration file name and
	theme are stored in the preferences now
	* dcsewerdesignextension.make.ave: Version is 2.0.7+cvs now
	* dcsewerdesign.profile.buildnodelist.ave: Actually return the node list
	* doc/en/dcsewerdesign.xml:
	* dcsewerdesign.profile.constantgradient.update.ave:
	* dcsewerdesign.profile.constantgradient.calculate.ave:
	* dcsewerdesign.profile.buildlinelist.ave:
	* dcsewerdesignextension.install.ave:
	* dcsewerdesignextension.make.ave:
	* dcsewerdesignextension.uninstall.ave: Fully implemented RFE #1240904;
	"Create Profile" function is currently broken.
	
2005-08-04  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcsewerdesign.complexprofile.create.ave:
	* dcsewerdesign.profile.buildnodelist.ave:
	* dcsewerdesign.profile.buildlinelist.ave: refactored
	* dcsewerdesign.profile.constantgradient.calculate.ave: Started with
	RFE #1240904 implementation
	* scripts.saveallscripts.ave: adjusted for new workstation
	* dcsewerdesignextension.make.ave: Adjusted for 2.0.8 release

2005-08-03  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcsewerdesign.apr: Added project as binary file.
	
2005-04-26  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcsewerdesign.nsi:
	* build.xml:
	* dcsewerdesignextension.make.ave:
	* doc/en/version.xml: version is 2.0.7 now